=== 2014-02-25

* Enhancements:
  * Upgraded Ruby 2.0.0 to patchlevel 451
  * Upgraded Ruby 1.9.3 to patchlevel 545
  * Upgraded rb-readline to 0.5.0 (compatible with Ruby 2.0)
  * Upgraded OpenSSL to version 1.0.0l
  * Upgraded libyaml to version 0.1.5

=== 2013-11-24

* Enhancements:
  * Upgraded Ruby 2.0.0 to patchlevel 353
  * Upgraded Ruby 1.9.3 to patchlevel 484
  * Upgraded RubyGems to version 1.8.28
  * Update mingwbuilds recipes for both 32 and 64bits (4.7.3 rev1)

* Internal:
  * Add task to automate pushing releases to bintray.com

=== 2013-07-07

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 374
  * Upgraded Ruby 1.9.3 to patchlevel 448
  * Upgraded Ruby 2.0.0 to patchlevel 247

=== 2013-05-17

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 429
  * Upgraded Ruby 2.0.0 to patchlevel 195

=== 2013-02-24 / Happy Birthday Ruby Edition!

* Enhancements:
  * Upgraded Ruby 2.0.0 to patchlevel 0
  * Upgraded rb-readline to 0.5.0.pre.1 (compatible with Ruby 2.0)

* Bugfixes:
  * Generate documentation for target version of Ruby

=== 2013-02-22

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 392
  * Upgraded OpenSSL to version 1.0.0k

=== 2013-02-07

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 385

=== 2013-01-17

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 374

=== 2012-12-25 / X-mas Edition

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 362

* Bugfixes:
  * Fix Japanese support in the installer. #139 #142 [mame]

=== 2012-11-09

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 327
  * Update mingwbuilds-32-4.7.2 to rev1
  * Retire build support for mingw64-32-4.6.3 DevKit
  * Add support for Ruby 2.0.0-preview1 (use NEXT option)

    rake ruby19 NEXT=1

* Bugfixes:
  * Disable Japanese support until changes to #139 are made

=== 2012-10-21

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 286
  * Upgraded Ruby 1.8.7 to patchlevel 371
  * Retire build support for mingw-32-4.5.2 DevKit