@@ -1,3 +1,8 @@
+=== (In Git)
+
+* Enhancements:
+  * Upgraded libyaml to version 0.1.6
+
 === 2014-02-25
 
 * Enhancements:
